[gd_scene load_steps=2 format=3 uid="uid://biuw063ainby4"]

[ext_resource type="Script" uid="uid://b1b3aqs46sno6" path="res://scripts/SessionScreen.gd" id="1_session"]

[node name="SessionScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_session")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.15, 0.3, 1)

[node name="TopBar" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 60.0
grow_horizontal = 2
theme_override_constants/separation = 10

[node name="BackButton" type="Button" parent="TopBar"]
layout_mode = 2
text = "‚Üê Terug"

[node name="HSeparator" type="HSeparator" parent="TopBar"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="StartGameButton" type="Button" parent="TopBar"]
layout_mode = 2
text = "Start Spel"

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 60.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="SessionInfo" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="PinDisplay" type="Label" parent="MarginContainer/VBoxContainer/SessionInfo"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "PIN: 000000"
horizontal_alignment = 1

[node name="PlayersCount" type="Label" parent="MarginContainer/VBoxContainer/SessionInfo"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "0/8 Spelers"
horizontal_alignment = 1

[node name="SharePinButton" type="Button" parent="MarginContainer/VBoxContainer/SessionInfo"]
layout_mode = 2
size_flags_horizontal = 4
text = "PIN Delen"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="PlayersSection" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="PlayersLabel" type="Label" parent="MarginContainer/VBoxContainer/PlayersSection"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Spelers in Sessie:"

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/PlayersSection"]
layout_mode = 2
size_flags_vertical = 3

[node name="PlayersList" type="VBoxContainer" parent="MarginContainer/VBoxContainer/PlayersSection/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10
